--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
 body {
   margin: 0;
   font-family: 'Helvetica Rounded', Helvetica, Arial, sans-serif;
+  background-color: black; 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
